# aws-cheap-django

./: README.md
app/: Dockerfile  db.sqlite3  pyproject.toml
app/config/: settings.py  urls.py
app/config/settings/: common.py  development.py  production.py
app/sample/: models.py  views.py
app/sample/migrations/: 0001_initial.py
terraform/: ecr.tf  efs.tf  lambda.tf  network.tf  variables.tf
